Redesigned the topbar, added new logo, move the instance key to the footer, added overflow to the quick search and moved it ot center, removed user name, moved language drodpown to the right, fixed the hardcoded color of the health icon. Closes #2591.

--- a/src/css/auth.scss
+++ b/src/css/auth.scss
@@ -31,10 +31,10 @@
 }
 
 .qore-small-logo {
-  padding: 0 10px 0 0;
+  padding: 0 5px 0 5px;
   vertical-align: middle;
-  width: 35px;
-  display: inline !important;
+  height: 44px;
+  display: inline-block !important;
 }
 
 .login-wrapper {
